hard-gists/75483d51641a0c03bf7c/run.log
=== Docker Run Log for 75483d51641a0c03bf7c ===
Started at: Mi 29. Okt 17:12:45 CET 2025

[2025-10-29 17:12:46] START: Running container for 75483d51641a0c03bf7c
[2025-10-29 17:12:46] SUCCESS: Container c317a4ab4d0f36a0441ac606f09b405b71b52c6f1aad9a416a3935a204c724d9 started for 75483d51641a0c03bf7c
=== Container logs for 75483d51641a0c03bf7c ===
  File "/snippet.py", line 180
    print "Likelihoods for test set 1"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 75483d51641a0c03bf7c ===
[2025-10-29 17:12:48] INFO: Container c317a4ab4d0f36a0441ac606f09b405b71b52c6f1aad9a416a3935a204c724d9 has stopped
